# nifi

./: Changelog.md  Dockerfile-Nifi  Dockerfile-Nifi-Registry  LICENSE  Makefile  README.md  clone.json  dockerhub-build.sh  dockerhub-push.sh  dockerhub-tag.sh  ecr-build.sh  ecr-pull.sh  ecr-push.sh  ecr-tag.sh  get-jdbc-nifi.sh  run-docker.sh
ansible/: ansible-dynamic.cfg  ansible.Dockerfile  ansible.cfg  requirements.txt
ansible/roles/: requirements.yml
ansible/scripts/: check-environment.jenkinsfile  (+3 more)
compose/: nifi-psql-images.yml  nifi-psql.yml
compose/docker/nifi-registry/: Dockerfile-1.16  Dockerfile-1.17  Dockerfile-1.18  Makefile.am  Makefile.in  docker-push.sh
compose/docker/nifi-registry/rootfs/tmp/: setup_awscli.sh
compose/docker/openfortivpn/: Dockerfile-22.04  Makefile.am  dockerhub-build.sh
compose/docker/openfortivpn/rootfs/tmp/: openfortivpn.tpl
docs/: Deploy-Ansible.md  Docker-Compose-Nifi.md  EKS-Nifi.md  README-Ansible.md  README-Nifi-Registry.md  README-Nifi.md  README-Terraform-Infra-Resources-EC2-Jumphost.md  README-Terraform-Infra-Resources-EC2-Nifi.md  README-Terraform-Infra-Resources-EC2-PSQL.md  README-Terraform-Infra-Resources-EKS-Nifi.md  README-Terraform-Infra-Resources-RDS-NifiDB.md  README.md  terraform-infracost-core-prod.md  terraform-infracost-core-staging.md  terraform-infracost-eks-prod.md  terraform-infracost-eks-staging.md  terraform-state-eks-prod.md  terraform-state-eks-staging.md
scripts/: get-jdbc-nifi-ec2-user.sh  get-jdbc-nifi-ubuntu.sh  nifi-psql-images-ec2-user.yml  nifi-psql-images-ubuntu.yml
(+256 files in other folders)
